NetBSD Problem Report #39608

From www@NetBSD.org  Mon Sep 22 08:29:59 2008
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 7FD9C63BA98
	for <gnats-bugs@gnats.netbsd.org>; Mon, 22 Sep 2008 08:29:59 +0000 (UTC)
Message-Id: <20080922082959.4109D63B884@narn.NetBSD.org>
Date: Mon, 22 Sep 2008 08:29:59 +0000 (UTC)
From: joel@carnat.net
Reply-To: joel@carnat.net
To: gnats-bugs@NetBSD.org
Subject: bge(4) constant freeze on BCM5906M
X-Send-Pr-Version: www-1.0

>Number:         39608
>Category:       kern
>Synopsis:       bge(4) constant freeze on BCM5906M
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Sep 22 08:30:00 +0000 2008
>Closed-Date:    Sun Nov 16 07:31:41 +0000 2008
>Last-Modified:  Sun Nov 16 07:31:41 +0000 2008
>Originator:     Joel CARNAT
>Release:        4.99.72/i386
>Organization:
>Environment:
NetBSD 4.99.72 (GENERIC) #0: Mon Sep 15 08:20:17 PDT 2008
>Description:
My Broadcom BCM5906M (from Dell XPS M1330) has network transfer issues.
It is configured with dhclient, running 4.99.72/i386.

Quite often it just stops working : no more paquets in/out.
I have to run "ifconfig down; ifconfig destroy;
/etc/rc.d/dhclient restart" to have the traffic back again.

I tried to discover if this was a matter of data transfered or
number or files (transfering big NetBSD iso and lots of small
text and music files) but it does not seem to be linked. It's
like it just decides that it needs a break :(

Nothing pops on the console, nor in dmesg...

I don't have such issues using OpenBSD (since 4.3 or 4.4-beta).
Nor with Linux and Windows XP.

Any thoughts ?
TIA,
        Jo

>How-To-Repeat:
Install NetBSD 4.99.72/i386 on Dell XPS M1330, configure bge0 and transfer things (via FTP, SSH or browsing the Internet).

dmesg :
Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
    2006, 2007, 2008
    The NetBSD Foundation, Inc.  All rights reserved.
Copyright (c) 1982, 1986, 1989, 1991, 1993
    The Regents of the University of California.  All rights reserved.

NetBSD 4.99.72 (GENERIC) #0: Mon Sep 15 08:20:17 PDT 2008

builds@wb25:/home/builds/ab/HEAD/i386/200809150002Z-obj/home/builds/ab/HEAD/src/sys/arch/i386/compile/GENERIC
total memory = 2038 MB
avail memory = 1991 MB
timecounter: Timecounters tick every 10.000 msec
timecounter: Timecounter "i8254" frequency 1193182 Hz quality 100
Dell Inc. XPS M1330                       
mainbus0 (root)
cpu0 at mainbus0 apid 0: Intel 686-class, 1995MHz, id 0x6fa
cpu0: Enhanced SpeedStep (1388 mV) 2000 MHz
cpu0: Enhanced SpeedStep frequencies available (MHz): 2200 2000 1800 1600 1400 
1200
cpu1 at mainbus0 apid 1: Intel 686-class, 1995MHz, id 0x6fa
ioapic0 at mainbus0 apid 2: pa 0xfec00000, version 20, 24 pins
acpi0 at mainbus0: Intel ACPICA 20080321
acpi0: X/RSDT: OemId <DELL  , M08    ,27d80708>, AslId <ASL ,00000061>
acpi0: SCI interrupting at int 9
timecounter: Timecounter "ACPI-Fast" frequency 3579545 Hz quality 1000
ACPI-Fast 24-bit timer
pckbc1 at acpi0 (PS2M, PNP0F13): aux port
pckbc1: irq 12
pckbc2 at acpi0 (KBC, PNP0303): kbd port
pckbc2: io 0x60,0x64,0x62,0x66 irq 1
attimer1 at acpi0 (TMR, PNP0100): AT Timer
attimer1: io 0x40-0x43,0x50-0x53 irq 2
pcppi1 at acpi0 (SPKR, PNP0800)
pcppi1: io 0x61,0x63,0x65,0x67
midi0 at pcppi1: PC speaker (CPU-intensive output)
sysbeep0 at pcppi1
npx1 at acpi0 (COPR, PNP0C04)
npx1: io 0xf0-0xff irq 13
npx1: reported by CPUID; using exception 16
acpilid0 at acpi0 (LID, PNP0C0D): ACPI Lid Switch
acpibut0 at acpi0 (PBTN, PNP0C0C): ACPI Power Button
acpibut1 at acpi0 (SBTN, PNP0C0E): ACPI Sleep Button
acpiacad0 at acpi0 (AC, ACPI0003): ACPI AC Adapter
acpibat0 at acpi0 (BAT0, PNP0C0A-1): ACPI Battery (Control Method)
acpibat0: battery info: DP-LGC52, LION, DELL NX5117 1438
acpidalb0 at acpi0 (MBTN, PNP0C32-0): Direct Application Launch Button
AMW0 (pnp0c14) at acpi0 not configured
acpitz0 at acpi0 (THM): critical 99.0C, passive cooling
apm0 at acpi0: Power Management spec V1.2
pckbd0 at pckbc2 (kbd slot)
pckbc2: using irq 1 for kbd slot
wskbd0 at pckbd0: console keyboard
pms0 at pckbc2 (aux slot)
pms0: Synaptics touchpad version 6.3
pms0: Palm detect, Multi-finger
pckbc2: using irq 12 for aux slot
wsmouse0 at pms0 mux 0
attimer1: attached to pcppi1
pci0 at mainbus0 bus 0: configuration mode 1
pci0: i/o space, memory space enabled, rd/line, rd/mult, wr/inv ok
pchb0 at pci0 dev 0 function 0
pchb0: vendor 0x8086 product 0x2a00 (rev. 0x0c)
agp0 at pchb0: detected 7676k stolen memory
agp0: aperture at 0xe0000000, size 0x20000000
vga1 at pci0 dev 2 function 0: vendor 0x8086 product 0x2a02 (rev. 0x0c)
vga1: WARNING: ignoring 64-bit BAR @ 0x10
vga1: WARNING: ignoring 64-bit BAR @ 0x18
wsdisplay0 at vga1 kbdmux 1: console (80x25, vt100 emulation), using wskbd0
wsmux1: connecting to wsdisplay0
drm at vga1 not configured
vendor 0x8086 product 0x2a03 (miscellaneous display, revision 0x0c) at pci0 dev 
2 function 1 not configured
uhci0 at pci0 dev 26 function 0: vendor 0x8086 product 0x2834 (rev. 0x02)
uhci0: interrupting at ioapic0 pin 20
usb0 at uhci0: USB revision 1.0
uhci1 at pci0 dev 26 function 1: vendor 0x8086 product 0x2835 (rev. 0x02)
uhci1: interrupting at ioapic0 pin 21
usb1 at uhci1: USB revision 1.0
ehci0 at pci0 dev 26 function 7: vendor 0x8086 product 0x283a (rev. 0x02)
ehci0: interrupting at ioapic0 pin 22
ehci0: EHCI version 1.0
ehci0: companion controllers, 2 ports each: uhci0 uhci1
usb2 at ehci0: USB revision 2.0
azalia0 at pci0 dev 27 function 0: Generic High Definition Audio Controller
azalia0: interrupting at ioapic0 pin 21
azalia0: host: 0x8086/0x284b (rev. 2), HDA rev. 1.0
ppb0 at pci0 dev 28 function 0: vendor 0x8086 product 0x283f (rev. 0x02)
ppb0: disabling notification events
pci1 at ppb0 bus 11
pci1: i/o space, memory space enabled, rd/line, wr/inv ok
ppb1 at pci0 dev 28 function 1: vendor 0x8086 product 0x2841 (rev. 0x02)
ppb1: disabling notification events
pci2 at ppb1 bus 12
pci2: i/o space, memory space enabled, rd/line, wr/inv ok
wpi0 at pci2 dev 0 function 0: vendor 0x8086 product 0x4222 (rev. 0x02)
wpi0: interrupting at ioapic0 pin 17
wpi0: MoW2, address 00:1b:77:b6:58:e6
wpi0: 11a rates: 6Mbps 9Mbps 12Mbps 18Mbps 24Mbps 36Mbps 48Mbps 54Mbps
wpi0: 11b rates: 1Mbps 2Mbps 5.5Mbps 11Mbps
wpi0: 11g rates: 1Mbps 2Mbps 5.5Mbps 11Mbps 6Mbps 9Mbps 12Mbps 18Mbps 24Mbps 
36Mbps 48Mbps 54Mbps
ppb2 at pci0 dev 28 function 3: vendor 0x8086 product 0x2845 (rev. 0x02)
ppb2: disabling notification events
pci3 at ppb2 bus 13
pci3: i/o space, memory space enabled, rd/line, wr/inv ok
ppb3 at pci0 dev 28 function 5: vendor 0x8086 product 0x2849 (rev. 0x02)
ppb3: disabling notification events
pci4 at ppb3 bus 9
pci4: i/o space, memory space enabled, rd/line, wr/inv ok
bge0 at pci4 dev 0 function 0: Broadcom BCM5906M Fast Ethernet
bge0: interrupting at ioapic0 pin 17
bge0: ASIC unknown BCM5906 (0xc002), Ethernet address 00:15:c5:7d:6c:db
bge0: setting short Tx thresholds
brgphy0 at bge0 phy 1: BCM5906 10/100baseTX media interface, rev. 0
brgphy0: using BCM5750 DSP patch
brgphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, auto
uhci2 at pci0 dev 29 function 0: vendor 0x8086 product 0x2830 (rev. 0x02)
uhci2: interrupting at ioapic0 pin 20
usb3 at uhci2: USB revision 1.0
uhci3 at pci0 dev 29 function 1: vendor 0x8086 product 0x2831 (rev. 0x02)
uhci3: interrupting at ioapic0 pin 21
usb4 at uhci3: USB revision 1.0
uhci4 at pci0 dev 29 function 2: vendor 0x8086 product 0x2832 (rev. 0x02)
uhci4: interrupting at ioapic0 pin 22
usb5 at uhci4: USB revision 1.0
ehci1 at pci0 dev 29 function 7: vendor 0x8086 product 0x2836 (rev. 0x02)
ehci1: interrupting at ioapic0 pin 20
ehci1: EHCI version 1.0
ehci1: companion controllers, 2 ports each: uhci2 uhci3 uhci4
usb6 at ehci1: USB revision 2.0
ppb4 at pci0 dev 30 function 0: vendor 0x8086 product 0x2448 (rev. 0xf2)
pci5 at ppb4 bus 3
pci5: i/o space, memory space enabled
fwohci0 at pci5 dev 1 function 0: vendor 0x1180 product 0x0832 (rev. 0x05)
fwohci0: interrupting at ioapic0 pin 19
fwohci0: OHCI version 1.10 (ROM=0)
fwohci0: No. of Isochronous channels is 4.
fwohci0: EUI64 43:4f:c0:00:22:0d:8c:70
fwohci0: Phy 1394a available S400, 1 ports.
fwohci0: Link S400, max_rec 2048 bytes.
ieee1394if0 at fwohci0: IEEE1394 bus
fwip0 at ieee1394if0: IP over IEEE1394
fwohci0: Initiate bus reset
vendor 0x1180 product 0x0822 (SD Host Controller system, interface 0x01, 
revision 0x22) at pci5 dev 1 function 1 not configured
vendor 0x1180 product 0x0843 (miscellaneous system, revision 0x12) at pci5 dev 
1 function 2 not configured
vendor 0x1180 product 0x0592 (miscellaneous system, revision 0x12) at pci5 dev 
1 function 3 not configured
vendor 0x1180 product 0x0852 (miscellaneous system, revision 0x12) at pci5 dev 
1 function 4 not configured
pcib0 at pci0 dev 31 function 0
pcib0: vendor 0x8086 product 0x2815 (rev. 0x02)
piixide0 at pci0 dev 31 function 1
piixide0: Intel 82801HBM IDE Controller (ICH8M) (rev. 0x02)
piixide0: bus-master DMA support present
piixide0: primary channel configured to compatibility mode
piixide0: primary channel interrupting at ioapic0 pin 14
atabus0 at piixide0 channel 0
piixide0: secondary channel configured to compatibility mode
piixide0: secondary channel ignored (disabled)
ahcisata0 at pci0 dev 31 function 2: vendor 0x8086 product 0x2829
ahcisata0: interrupting at ioapic0 pin 17
ahcisata0: AHCI revision 1.1, 3 ports, 32 command slots, features 0xe720e0c0
atabus1 at ahcisata0 channel 0
atabus2 at ahcisata0 channel 2
ichsmb0 at pci0 dev 31 function 3: vendor 0x8086 product 0x283e (rev. 0x02)
ichsmb0: interrupting at ioapic0 pin 17
iic0 at ichsmb0: I2C bus
isa0 at pcib0
isapnp0 at isa0 port 0x279: ISA Plug 'n Play device support
isapnp0: no ISA Plug 'n Play devices found
fwohci0: BUS reset
fwohci0: node_id=0xc800ffc0, gen=1, CYCLEMASTER mode
ieee1394if0: 1 nodes, maxhop <= 0, cable IRM = 0 (me)
ieee1394if0: bus manager 0 (me)
timecounter: Timecounter "clockinterrupt" frequency 100 Hz quality 0
timecounter: Timecounter "TSC" frequency 1995199800 Hz quality 3000
acpiacad0: AC adapter online.
azalia0: codec[0]: Sigmatel STAC9228X (rev. 2.1), HDA rev. 1.0
azalia0: codec[2]: 0x1095/0x1392 (rev. 0.0), HDA rev. 1.0
audio0 at azalia0: full duplex, independent
atapibus0 at atabus0: 2 targets
uhub0 at usb0: vendor 0x8086 UHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub0: 2 ports with 2 removable, self powered
uhub1 at usb1: vendor 0x8086 UHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub1: 2 ports with 2 removable, self powered
uhub2 at usb2: vendor 0x8086 EHCI root hub, class 9/0, rev 2.00/1.00, addr 1
uhub2: 4 ports with 4 removable, self powered
cd0 at atapibus0 drive 0: <MATSHITA DVD+/-RW UJ-857G, , Z111> cdrom removable
uhub3 at usb3: vendor 0x8086 UHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub3: 2 ports with 2 removable, self powered
uhub4 at usb4: vendor 0x8086 UHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub4: 2 ports with 2 removable, self powered
uhub5 at usb5: vendor 0x8086 UHCI root hub, class 9/0, rev 1.00/1.00, addr 1
uhub5: 2 ports with 2 removable, self powered
uhub6 at usb6: vendor 0x8086 EHCI root hub, class 9/0, rev 2.00/1.00, addr 1
uhub6: 6 ports with 6 removable, self powered
cd0: 32-bit data port
cd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 2 (Ultra/33)
cd0(piixide0:0:0): using PIO mode 4, Ultra-DMA mode 2 (Ultra/33) (using DMA)
ahcisata0 port 0: device present, speed: 3.0Gb/s
wd0 at atabus1 drive 0: <Hitachi HTS722020K9A300>
wd0: drive supports 16-sector PIO transfers, LBA48 addressing
wd0: 186 GB, 387621 cyl, 16 head, 63 sec, 512 bytes/sect x 390721968 sectors
wd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133)
wd0(ahcisata0:0:0): using PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133) 
(using DMA)
ahcisata0 port 2: PHY offline
uvideo0 at uhub6 port 6 configuration 1 interface 0: OmniVision Technologies, 
Inc. -2640-07.05.16.3 Laptop Integrated Webcam, rev 2.00/1.00, addr 2
video0 at uvideo0: OmniVision Technologies, Inc. -2640-07.05.16.3 Laptop 
Integrated Webcam, rev 2.00/1.00, addr 2
Kernelized RAIDframe activated
pad0: outputs: 44100Hz, 16-bit, stereo
audio1 at pad0: half duplex
boot device: wd0
root on wd0a dumps on wd0b
root file system type: ffs
uhub7 at uhub0 port 2: Broadcom BCM2045B2, class 9/0, rev 2.00/1.00, addr 2
uhub7: 3 ports with 0 removable, self powered
ugen0 at uhub1 port 2
ugen0: Novatel Wireless Novatel Wireless HSDPA Modem, rev 1.10/0.00, addr 2
ubt0 at uhub7 port 1
ubt0: Broadcom Corp BCM2045, rev 2.00/1.00, addr 3
uhidev0 at uhub7 port 2 configuration 1 interface 0
uhidev0: Broadcom Corp product 0x4502, rev 2.00/1.00, addr 4, iclass 3/1
ukbd0 at uhidev0
wskbd1 at ukbd0 mux 1
wskbd1: connecting to wsdisplay0
uhidev1 at uhub7 port 3 configuration 1 interface 0
uhidev1: Broadcom Corp product 0x4503, rev 2.00/1.00, addr 5, iclass 3/1
uhidev1: 125 report ids
ums0 at uhidev1 reportid 2: 3 buttons
wsmouse1 at ums0 mux 0
uhid0 at uhidev1 reportid 125: input=2, output=0, feature=0
wsdisplay0: screen 1 added (80x25, vt100 emulation)
wsdisplay0: screen 2 added (80x25, vt100 emulation)
wsdisplay0: screen 3 added (80x25, vt100 emulation)
wsdisplay0: screen 4 added (80x25, vt100 emulation)

Output from `ifconfig -v bge0` :

*** just after the first boot

bge0: flags=8843<UP,BROADCAST,RUNNING,SIMPLEX,MULTICAST> mtu 1500

capabilities=3f80<TSO4,IP4CSUM_Rx,IP4CSUM_Tx,TCP4CSUM_Rx,TCP4CSUM_Tx,UDP4CSUM_Rx,UDP4CSUM_Tx>
        enabled=0
        address: 00:15:c5:7d:6c:db
        media: Ethernet autoselect (100baseTX 
full-duplex,flowcontrol,rxpause,txpause)
        status: active
        input: 3 packets, 710 bytes, 2 multicasts
        output: 10 packets, 1320 bytes, 7 multicasts
        inet 10.15.5.26 netmask 0xffffff00 broadcast 10.15.5.255
        inet6 fe80::215:c5ff:fe7d:6cdb%bge0 prefixlen 64 scopeid 0x2

*** just after the first bge0 freeze

bge0: flags=8843<UP,BROADCAST,RUNNING,SIMPLEX,MULTICAST> mtu 1500

capabilities=3f80<TSO4,IP4CSUM_Rx,IP4CSUM_Tx,TCP4CSUM_Rx,TCP4CSUM_Tx,UDP4CSUM_Rx,UDP4CSUM_Tx>
        enabled=0
        address: 00:15:c5:7d:6c:db
        media: Ethernet autoselect (100baseTX 
full-duplex,flowcontrol,rxpause,txpause)
        status: active
        input: 956361 packets, 1447563303 bytes, 112 multicasts
        output: 643728 packets, 42554852 bytes, 7 multicasts
        inet 10.15.5.26 netmask 0xffffff00 broadcast 10.15.5.255
        inet6 fe80::215:c5ff:fe7d:6cdb%bge0 prefixlen 64 scopeid 0x2

*** just after `ifconfig bge0 down; ifconfig bge0 delete; /etc/rd.d/dhclient restart`, then browse the Internet and freeze again.

bge0: flags=8843<UP,BROADCAST,RUNNING,SIMPLEX,MULTICAST> mtu 1500

capabilities=3f80<TSO4,IP4CSUM_Rx,IP4CSUM_Tx,TCP4CSUM_Rx,TCP4CSUM_Tx,UDP4CSUM_Rx,UDP4CSUM_Tx>
        enabled=0
        address: 00:15:c5:7d:6c:db
        media: Ethernet autoselect (100baseTX 
full-duplex,flowcontrol,rxpause,txpause)
        status: active
        input: 1259794 packets, 1903466920 bytes, 118 multicasts
        output: 879383 packets, 58124530 bytes, 7 multicasts
        inet 10.15.5.26 netmask 0xffffff00 broadcast 10.15.5.255
        inet6 fe80::215:c5ff:fe7d:6cdb%bge0 prefixlen 64 scopeid 0x2

>Fix:
no idea :(

>Release-Note:

>Audit-Trail:
From: "Joel Carnat" <joel@carnat.net>
To: gnats-bugs@NetBSD.org
Cc: kern-tech@netbsd.org
Subject: Re: kern/39608: bge(4) constant freeze on BCM5906M
Date: Thu, 6 Nov 2008 09:57:52 +0100 (CET)

 Hello,

 Le Lun 22 septembre 2008 9:30, gnats-admin@netbsd.org a écrit :
 >
 >>Category:       kern
 >>Responsible:    kern-bug-people
 >>Synopsis:       bge(4) constant freeze on BCM5906M
 >>Arrival-Date:   Mon Sep 22 08:30:00 +0000 2008
 >

 With the help from Karl Uwe Lockhoff, the following informations raised:
 - playing with ifconfig capabilities don't improve anything.
 - forcing "media 10baseT" or "media 10baseT mediaopt full-duplex" enable
 bge(4) to work OK (~350 KiB/s stable).

 Best regards,
      Jo


State-Changed-From-To: open->pending-pullups
State-Changed-By: cegger@NetBSD.org
State-Changed-When: Mon, 10 Nov 2008 22:56:38 +0000
State-Changed-Why:
Fix from Karl Uwe Lockhoff via tech-kern@ committed. Requested pullup to netbsd-5 (Ticket #44).


From: Christoph Egger <cegger@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39608 CVS commit: src/sys/dev/pci
Date: Mon, 10 Nov 2008 22:50:19 +0000 (UTC)

 Module Name:	src
 Committed By:	cegger
 Date:		Mon Nov 10 22:50:19 UTC 2008

 Modified Files:
 	src/sys/dev/pci: if_bge.c

 Log Message:
 PR kern/39608: bge(4) constant freeze on BCM5906M:
 Correct DMA values. Patch from Karl Uwe Lockhoff via tech-kern.


 To generate a diff of this commit:
 cvs rdiff -r1.153 -r1.154 src/sys/dev/pci/if_bge.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Joel CARNAT <joel@carnat.net>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org
Subject: Re: Re: kern/39608: bge(4) constant freeze on BCM5906M
Date: Fri, 14 Nov 2008 23:29:06 +0100

 --h31gzZEtNLTqOjlF
 Content-Type: text/plain; charset=iso-8859-15
 Content-Disposition: inline
 Content-Transfer-Encoding: quoted-printable

 Hello,

 I just tested if_bge.c (Revision 1.154) on every bge(4) machines I have.

 I downloaded (using FTP) an i386cd.iso successfully.
 I also uploaded a few text (dmesg, sysctl results...) file onto my NFS serv=
 er.

 Everything seems to work nice.

 The following hardware was tested:
 Dell Latitude D430/NetBSD 5.0_BETA/i386
 	bge0 at pci3 dev 0 function 0: Broadcom BCM5752 Gigabit Ethernet
 	bge0: interrupting at ioapic0 pin 18
 	bge0: ASIC BCM5752 A2 (0x6002), Ethernet address 00:1c:23:00:6c:da
 	bge0: setting short Tx thresholds
 	brgphy0 at bge0 phy 1: BCM5752 1000BASE-T media interface, rev. 0
 	brgphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000ba=
 seT-FDX, auto

 Dell Latitude D630/NetBSD 5.0_BETA/i386
 	bge0 at pci3 dev 0 function 0: Broadcom BCM5755M Gigabit Ethernet
 	bge0: interrupting at ioapic0 pin 17
 	bge0: ASIC BCM5755 A2 (0xa002), Ethernet address 00:1c:23:47:76:44
 	bge0: setting short Tx thresholds
 	brgphy0 at bge0 phy 1: BCM5755 1000BASE-T media interface, rev. 0
 	brgphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000ba=
 seT-FDX, auto

 Dell Latitude D630/NetBSD 5.0_BETA/amd64 (same laptop as above but with /am=
 d64 running)
 	bge0 at pci3 dev 0 function 0: Broadcom BCM5755M Gigabit Ethernet
 	bge0: interrupting at ioapic0 pin 17
 	bge0: ASIC BCM5755 A2 (0xa002), Ethernet address 00:1c:23:47:76:44
 	bge0: setting short Tx thresholds
 	brgphy0 at bge0 phy 1: BCM5755 1000BASE-T media interface, rev. 0
 	brgphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000ba=
 seT-FDX, auto


 Dell XPS M1330/NetBSD 5.0_BETA/i386
 	bge0 at pci4 dev 0 function 0: Broadcom BCM5906M Fast Ethernet
 	bge0: interrupting at ioapic0 pin 17
 	bge0: ASIC unknown BCM5906 (0xc002), Ethernet address 00:15:c5:7d:6c:db
 	bge0: setting short Tx thresholds
 	brgphy0 at bge0 phy 1: BCM5906 10/100baseTX media interface, rev. 0
 	brgphy0: using BCM5750 DSP patch
 	brgphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, auto

 Lenovo S10/NetBSD 5.0_BETA/i386
 	bge0 at pci1 dev 0 function 0: Broadcom BCM5906M Fast Ethernet
 	bge0: interrupting at ioapic0 pin 16
 	bge0: ASIC unknown BCM5906 (0xc002), Ethernet address 00:1e:68:ad:ee:bd
 	bge0: setting short Tx thresholds
 	brgphy0 at bge0 phy 1: BCM5906 10/100baseTX media interface, rev. 0
 	brgphy0: using BCM5750 DSP patch
 	brgphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, auto

 Dell D430 and D630 already worked OK before the patch, and still do after.
 Dell M1330 and Lenovo S10 didn't work before the patch, and do now.

 My source tree was from syssrc.tgz, updated this evening from netbsd-5 and =
 where
 if_bge.c only was replaced with the one from -HEAD.

 Hope it helps,
 	Jo

 On Thu, Nov 06 2008 - 09:57, Joel Carnat wrote:
 > Hello,
 >=20
 > Le Lun 22 septembre 2008 9:30, gnats-admin@netbsd.org a =E9crit :
 > >
 > >>Category:       kern
 > >>Responsible:    kern-bug-people
 > >>Synopsis:       bge(4) constant freeze on BCM5906M
 > >>Arrival-Date:   Mon Sep 22 08:30:00 +0000 2008
 > >
 >=20
 > With the help from Karl Uwe Lockhoff, the following informations raised:
 > - playing with ifconfig capabilities don't improve anything.
 > - forcing "media 10baseT" or "media 10baseT mediaopt full-duplex" enable
 > bge(4) to work OK (~350 KiB/s stable).
 >=20
 > Best regards,
 >      Jo
 >=20
 >=20

 --h31gzZEtNLTqOjlF
 Content-Type: application/pgp-signature
 Content-Disposition: inline

 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (NetBSD)

 iEYEARECAAYFAkkd+7IACgkQ0/VH7L7F7Y4czACfaRmSBe2VO6CjdlXFfZiJHRou
 YzAAn32Q2WHqGoV6uFghcdd9733R4yom
 =Zvkj
 -----END PGP SIGNATURE-----

 --h31gzZEtNLTqOjlF--

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39608 CVS commit: [netbsd-5] src/sys/dev/pci
Date: Sat, 15 Nov 2008 02:39:17 +0000 (UTC)

 Module Name:	src
 Committed By:	snj
 Date:		Sat Nov 15 02:39:17 UTC 2008

 Modified Files:
 	src/sys/dev/pci [netbsd-5]: if_bge.c

 Log Message:
 Pull up following revision(s) (requested by cegger in ticket #44):
 	sys/dev/pci/if_bge.c: revision 1.154
 PR kern/39608: bge(4) constant freeze on BCM5906M:
 Correct DMA values. Patch from Karl Uwe Lockhoff via tech-kern.


 To generate a diff of this commit:
 cvs rdiff -r1.152 -r1.152.4.1 src/sys/dev/pci/if_bge.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: cegger@NetBSD.org
State-Changed-When: Sun, 16 Nov 2008 07:31:41 +0000
State-Changed-Why:
bug has been fixed and pullup request to netbsd-5 (ticket #44) has been handled.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.