Pull up following revision(s) (requested by cegger in ticket #44): 	sys/dev/pci/if_bge.c: revision 1.154 PR kern/39608: bge(4) constant freeze on BCM5906M: Correct DMA values. Patch from Karl Uwe Lockhoff via tech-kern.